<resources>
    <string name="app_name">Tasky</string>

    <string name="flyingowl">No basta con alcanzar la sabiduría, es necesario saber utilizarla</string>
    <string name="deer">No te ganas la lealtad en un día, te la ganas día a día</string>
    <string name="fish">Un camino de mil millas comienza con un paso</string>
    <string name="rooster">La puntualidad es la educación de los reyes</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_test">Test</string>
    <string name="category">Categoría</string>
    <string name="task">Tarea</string>
    <string name="add">Agregar</string>

    <string name="for_today">Para hoy</string>
    <string name="all">Todo</string>
    <string name="tasks_for_today">Tareas pendientes para hoy</string>
    <string name="tasks">Tareas</string>
    <string name="categories">Categorías</string>
    <string name="name">Nombre</string>
    <string name="priority">Prioridad</string>
    <string name="type">Tipo</string>
    <string name="limit_date">Fecha límite</string>
    <string name="cancel">Cancelar</string>
    <string name="create_category">Crear categoría</string>
    <string name="category_name_hint">Nombre de la categoría</string>
    <string name="add_category">Agregar categoría</string>
    <string name="color">Color</string>
    <string name="icon">Ícono</string>
    <string name="select_category_name">Seleccione un nombre para la categoría</string>
    <string name="select_color">Seleccione un color</string>
    <string name="cyan">Cyan</string>Î
    <string name="green">Verde</string>
    <string name="orange">Naranja</string>
    <string name="purple">Púrpura</string>
    <string name="select_icon">Seleccione un ícono</string>
    <string name="default_icon">Ícono por defecto</string>
    <string name="icon_2">Ícono 2</string>
    <string name="icon_3">Ícono 3</string>
    <string name="icon_4">Ícono 4</string>
    <string name="icon_5">Ícono 5</string>
    <string name="icon_6">Ícono 6</string>
    <string name="icon_7">Ícono 7</string>
    <string name="icon_8">Ícono 8</string>
    <string name="icon_9">Ícono 9</string>
    <string name="icon_1_default">Ícono 1 (por defecto)</string>
    <string name="red_default">Rojo (por defecto)</string>
    <string name="edit_category">Editar categoría</string>
    <string name="delete_category">Eliminar categoría</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_priority">Seleccione nivel de prioridad</string>
    <string name="high_priority_default">Prioridad alta (por defecto)</string>
    <string name="medium_priority">Prioridad media</string>
    <string name="medium_priority_short">P. media</string>
    <string name="low_priority">Prioridad baja</string>
    <string name="goal_default">Meta (por defecto)</string>
    <string name="goal">Meta</string>
    <string name="activity">Actividad</string>
    <string name="homework">Tarea</string>
    <string name="other">Otra</string>
    <string name="select_type">Seleccione un tipo</string>
    <string name="select_task_name">Seleccione un nombre para la tarea</string>
    <string name="priority_level">Nivel de prioridad</string>
    <string name="high_priority">Prioridad alta</string>
    <string name="task_type">Tipo de tarea</string>
    <string name="diary_task">Tarea diaria</string>
    <string name="unique_task">Tarea única</string>

    <string name="monday">lunes</string>
    <string name="tuesday">martes</string>
    <string name="wednesday">miércoles</string>
    <string name="thursday">jueves</string>
    <string name="friday">viernes</string>
    <string name="saturday">sábado</string>
    <string name="sunday">domingo</string>

    <string name="january">enero</string>
    <string name="february">febrero</string>
    <string name="march">marzo</string>
    <string name="april">abril</string>
    <string name="may">mayo</string>
    <string name="june">junio</string>
    <string name="july">julio</string>
    <string name="august">agosto</string>
    <string name="september">septiembre</string>
    <string name="october">octubre</string>
    <string name="november">noviembre</string>
    <string name="december">diciembre</string>

    <string name="delete">ELIMINAR</string>
    <string name="of">de</string>
    <string name="of2">del</string>
    <string name="select_your_type">Selecciona el tipo de soñador que eres:</string>
    <string name="dream_calculator">Calculadora de sueño</string>
    <string name="deleted">eliminada</string>
    <string name="undo">DESHACER</string>
    <string name="zero_categories">No tiene categorías creadas en el momento.</string>
    <string name="what_are_you_waiting">¿Qué esperas para crear una?</string>
    <string name="create_first_pls">Crea la primera en la barra lateral</string>
    <string name="sure_remove_category">¿Está seguro de eliminar esta categoría?</string>
    <string name="no">No</string>
    <string name="yes_delete">Sí, eliminar</string>
    <string name="this_remove_category_tasks">Si lo hace eliminirá todas las tareas que ésta contenga</string>
    <string name="state">Estado</string>
    <string name="progress_5_5">Progreso: 5/5</string>

    <string name="completed">Completado</string>
    <string name="pending">Pendiente</string>
    <string name="expired">Expirado</string>
    <string name="create_task">Crear tarea</string>
    <string name="time_to_socialize">Llegó la hora de socializar…</string>
    <string name="no_tasks_for_today">No tiene tareas para hoy</string>
    <string name="delete_all_tasks">Borrar todas la tareas</string>
    <string name="delete_expired_tasks">Borrar tareas expiradas</string>
    <string name="delete_complete_goals">Borrar metas completadas</string>
    <string name="choose_options">Escoja la(s) opciones deseadas a continuación</string>
    <string name="delete_complete_tasks">Eliminar tareas completadas de la categoría</string>
    <string name="how_much_sleep">¿Cuánto tengo que dormir?</string>
    <string name="select_hour">Selecciona la hora a la que te vas a</string>
    <string name="sleep">dormir</string>
    <string name="wake_up">despertar</string>
    <string name="calculate">calcular</string>
    <string name="next_hours">en las siguientes horas:</string>
    <string name="you_should">Deberías</string>
    <string name="save">Guardar</string>
    <string name="back">Volver</string>
    <string name="advance">Avance</string>
    <string name="report_progress">Reportar progreso</string>
    <string name="new_limit_date">Nueva fecha límite</string>
    <string name="welcome">Bienvenido</string>
    <string name="notification_info">Revisa tu agenda y prográmate responsablemente</string>
    <string name="notification_title">¿Qué planes tienes para hoy?</string>
</resources>
