<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginEnd="50dp"
    android:layout_marginStart="50dp"
    android:background="@drawable/background_dialog"
    android:fitsSystemWindows="true"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/name"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/name"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:textAlignment="center"
            android:textColor="?attr/textColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending"
            android:textAlignment="center"
            android:textColor="?attr/textColor"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/high_priority"
            android:textAlignment="center"
            android:textColor="?attr/textColor"
            android:textSize="13sp"
            android:textStyle="italic" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="3"
            android:rowCount="3">

            <CheckBox
                android:id="@+id/monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/monday"
                android:textColor="?attr/textColor" />

            <CheckBox
                android:id="@+id/tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tuesday"
                android:textColor="?attr/textColor" />

            <CheckBox
                android:id="@+id/wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/wednesday"
                android:textColor="?attr/textColor" />

            <CheckBox
                android:id="@+id/thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/thursday"
                android:textColor="?attr/textColor" />

            <CheckBox
                android:id="@+id/friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/friday"
                android:textColor="?attr/textColor" />

            <CheckBox
                android:id="@+id/saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/saturday"
                android:textColor="?attr/textColor" />

        </GridLayout>

        <CheckBox
            android:id="@+id/sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/sunday"
            android:textColor="?attr/textColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/noButton"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:background="@drawable/background_button_transparent"
                android:padding="8dp"
                android:text="@string/back"
                android:textColor="?attr/textColor" />

            <Button
                android:id="@+id/yesButton"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/background_button_styled"
                android:padding="8dp"
                android:text="@string/save"
                android:textColor="?attr/textColor2" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>