<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginEnd="50dp"
    android:layout_marginStart="50dp"
    android:background="@drawable/background_dialog"
    android:fitsSystemWindows="true"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/delete_complete_tasks"
            android:textAlignment="center"
            android:textColor="?attr/textColor"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/choose_options"
            android:textAlignment="center"
            android:textColor="?attr/textColor"
            android:textSize="13sp"
            android:textStyle="italic" />

        <CheckBox
            android:id="@+id/completedGoals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:checked="true"
            android:text="@string/delete_complete_goals"
            android:textColor="?attr/textColor" />

        <CheckBox
            android:id="@+id/expiredTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/delete_expired_tasks"
            android:textColor="?attr/textColor" />

        <CheckBox
            android:id="@+id/allTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_red_round"
            android:paddingEnd="10dp"
            android:paddingStart="15dp"
            android:text="@string/delete_all_tasks"
            android:textColor="?attr/textColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/noButton"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:background="@drawable/background_button_transparent"
                android:padding="8dp"
                android:text="@string/no"
                android:textColor="?attr/textColor" />

            <Button
                android:id="@+id/yesButton"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/background_button_styled"
                android:padding="8dp"
                android:text="@string/delete"
                android:textColor="?attr/textColor2" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>