<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginEnd="50dp"
    android:layout_marginStart="50dp"
    android:background="@drawable/background_dialog"
    android:fitsSystemWindows="true"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/name"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="?attr/textColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending"
            android:textAlignment="center"
            android:textColor="?attr/textColor"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/high_priority"
            android:textAlignment="center"
            android:textColor="?attr/textColor"
            android:textSize="13sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress_5_5"
            android:textAlignment="center"
            android:textColor="?attr/textColor"
            android:textSize="15sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/advance"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:hint="@string/advance"
                android:inputType="number"
                android:paddingEnd="7dp"
                android:paddingStart="7dp"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="?attr/textColor"
                android:textColorHint="?attr/textColorHint" />

            <Button
                android:id="@+id/reportAdvance"
                android:layout_width="165dp"
                android:layout_height="35dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/background_button_light"
                android:padding="8dp"
                android:text="@string/report_progress"
                android:textColor="?attr/textColor" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <!--<Button-->
            <!--android:id="@+id/dateButton"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="35dp"-->
            <!--android:background="@drawable/background_button_light"-->
            <!--android:paddingEnd="8dp"-->
            <!--android:paddingStart="8dp"-->
            <!--android:text="@string/new_limit_date"-->
            <!--android:textColor="?attr/textColor" />-->

            <TextView
                android:id="@+id/dateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text=""
                android:textColor="?attr/textColor"
                android:textSize="20sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/noButton"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:background="@drawable/background_button_transparent"
                android:padding="8dp"
                android:text="@string/back"
                android:textColor="?attr/textColor" />

            <Button
                android:id="@+id/yesButton"
                android:layout_width="110dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/background_button_styled"
                android:padding="8dp"
                android:text="@string/save"
                android:textColor="?attr/textColor2" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>