<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Fragments.NoCategories">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:src="@drawable/ic_void"
        android:tint="@color/light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/zero_categories"
        android:textAlignment="center"
        android:textColor="?attr/textColor2"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_are_you_waiting"
        android:textAlignment="center"
        android:textColor="?attr/textColor2"
        android:textSize="20sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/create_first_pls"
        android:textAlignment="center"
        android:textColor="?attr/textColor2"
        android:textSize="20sp"
        android:textStyle="italic" />

</LinearLayout>