<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginEnd="50dp"
    android:layout_marginStart="50dp"
    android:background="@drawable/background_dialog"
    android:fitsSystemWindows="true"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/sure_remove_category"
            android:textAlignment="center"
            android:textColor="?attr/textColor"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/this_remove_category_tasks"
            android:textAlignment="center"
            android:textColor="?attr/textColor"
            android:textSize="13sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/noButton"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:background="@drawable/background_button_transparent"
                android:padding="8dp"
                android:text="@string/no"
                android:textColor="?attr/textColor" />

            <Button
                android:id="@+id/yesButton"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/background_button_styled"
                android:padding="8dp"
                android:text="@string/yes_delete"
                android:textColor="?attr/textColor2" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>